<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/palavra_email" />

    <EditText
        android:id="@+id/edit_Senha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:password="true"
        android:inputType="textPersonName"
        android:hint="@string/palavra_senha" />

    <EditText
        android:id="@+id/edit_Senha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:password="true"
        android:inputType="textPersonName"
        android:hint="@string/palavra_repetir_senha" />

</LinearLayout>