<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPessoa"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nomePessoaTelaPessoa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:text="@string/nome_pessoa"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/listaAlimentosTelaPessoa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/valorTotalPessoal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/valor_conta"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/valor10PorCentoPessoal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/valor_10_por_cento"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_finalizarContaPessoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/texto_btn_Pagar" />

    </LinearLayout>

</LinearLayout>