<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaDespesaBarERestaurante"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_valor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:text="@string/valor_conta"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:fontFamily="@font/cabin"/>

        <TextView
            android:id="@+id/valorTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:text="@string/valor_padrao"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:fontFamily="@font/cabin"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listaPessoasTelaConta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_NovaPessoa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/texto_btn_TelaPessoas"
            android:fontFamily="@font/cabin"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/button_shape_round_border_white" />
        <Button
            android:id="@+id/btn_CadastroAlimento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/texto_btn_AdicionarComida"
            android:fontFamily="@font/cabin"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/button_shape_round_border_white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_FecharConta"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/texto_btn_FinalizarDespesa"
            android:fontFamily="@font/cabin"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/button_shape_round_border_white" />
    </LinearLayout>

</LinearLayout>