<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaInicial">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:paddingTop="10dp"
                android:text="@string/texto_tela_Inicial"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn_CadastroPessoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/texto_btn_AdicionarPessoa"
                tools:paddingTop="10dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listaPessoasTelaInicial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btn_ConcluirCadastro"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/texto_btn_Concluir"
                tools:paddingTop="10dp" />
        </LinearLayout>

</LinearLayout>