<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_nome_historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/palavra_nome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_data_historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nome_historico"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="6dp"
        android:text="@string/palavra_dia"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="@font/cabin"/>

    <TextView
        android:id="@+id/tv_status_historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_data_historico"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="6dp"
        android:text="@string/palavra_status"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="@font/cabin"/>

    <TextView
        android:id="@+id/tv_valor_historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="6dp"
        android:layout_toStartOf="@+id/iv_delete"
        android:layout_toLeftOf="@+id/iv_delete"
        android:text="@string/palavra_valor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/cabin"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:srcCompat="@drawable/ic_next" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:onClick="deletarRole"
        app:srcCompat="@drawable/ic_delete" />

</RelativeLayout>